[package]
name = "dijkstra-performance-study"
version = "0.1.0"
authors = ["Florian Barth <florianbarth@gmx.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "^0.13"
bincode = "^1.2"
serde = {version = "^1.0", features= ["derive"] }
rand = "^0.7"
rand_pcg = "^0.2"
structopt = "^0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dijkstra"
harness = false
